# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("cjc.gni")
import("multi-product_diff.gni")

cangjie_systemapi = "//vendor/huawei/arkcompiler/cangjie_api"
cangjie_systemapi_api = "${cangjie_systemapi}/api"

cangjie_systemapi_libs = [
  {
    label = "${cangjie_systemapi_api}/ability/ability_result:ohos.ability.ability_result"
    lib_name = "ability.ability_result"
  },
  {
    label = "${cangjie_systemapi_api}/ability/connect_options:ohos.ability.connect_options"
    lib_name = "ability.connect_options"
  },
  {
    label = "${cangjie_systemapi_api}/app:ohos.app"
    lib_name = "app"
  },
  {
    label = "${cangjie_systemapi_api}/app/ability:ohos.app.ability"
    lib_name = "app.ability"
  },
  {
    label = "${cangjie_systemapi_api}/app/ability/ability_constant:ohos.app.ability.ability_constant"
    lib_name = "app.ability.ability_constant"
  },
  {
    label = "${cangjie_systemapi_api}/app/ability/ability_stage:ohos.app.ability.ability_stage"
    lib_name = "app.ability.ability_stage"
  },
  {
    label = "${cangjie_systemapi_api}/app/ability/app_recovery:ohos.app.ability.app_recovery"
    lib_name = "app.ability.app_recovery"
  },
  {
    label = "${cangjie_systemapi_api}/app/ability/completion_handler:ohos.app.ability.completion_handler"
    lib_name = "app.ability.completion_handler"
  },
  {
    label = "${cangjie_systemapi_api}/app/ability/configuration:ohos.app.ability.configuration"
    lib_name = "app.ability.configuration"
  },
  {
    label = "${cangjie_systemapi_api}/app/ability/common:ohos.app.ability.common"
    lib_name = "app.ability.common"
  },
  {
    label = "${cangjie_systemapi_api}/app/ability/context_constant:ohos.app.ability.context_constant"
    lib_name = "app.ability.context_constant"
  },
  {
    label = "${cangjie_systemapi_api}/app/ability/dialog_request:ohos.app.ability.dialog_request"
    lib_name = "app.ability.dialog_request"
  },
  {
    label = "${cangjie_systemapi_api}/app/ability/error_manager:ohos.app.ability.error_manager"
    lib_name = "app.ability.error_manager"
  },
  {
    label = "${cangjie_systemapi_api}/app/ability/open_link_options:ohos.app.ability.open_link_options"
    lib_name = "app.ability.open_link_options"
  },
  {
    label = "${cangjie_systemapi_api}/app/ability/start_options:ohos.app.ability.start_options"
    lib_name = "app.ability.start_options"
  },
  {
    label = "${cangjie_systemapi_api}/app/ability/ui_ability:ohos.app.ability.ui_ability"
    lib_name = "app.ability.ui_ability"
  },
  {
    label = "${cangjie_systemapi_api}/app/ability/want:ohos.app.ability.want"
    lib_name = "app.ability.want"
  },
  {
    label = "${cangjie_systemapi_api}/app/ability/want_constant:ohos.app.ability.want_constant"
    lib_name = "app.ability.want_constant"
  },
  {
    label = "${cangjie_systemapi_api}/application/error_observer:ohos.application.error_observer"
    lib_name = "application.error_observer"
  },
  {
    label =
        "${cangjie_systemapi_api}/ability_access_ctrl:ohos.ability_access_ctrl"
    lib_name = "ability_access_ctrl"
  },
  {
    label = "${cangjie_systemapi_api}/battery_info:ohos.battery_info"
    lib_name = "battery_info"
  },
  {
    label = "${cangjie_systemapi_api}/bluetooth:ohos.bluetooth"
    lib_name = "bluetooth"
  },
  {
    label = "${cangjie_systemapi_api}/bluetooth/base_profile:ohos.bluetooth.base_profile"
    lib_name = "bluetooth.base_profile"
  },
  {
    label = "${cangjie_systemapi_api}/bluetooth/ble:ohos.bluetooth.ble"
    lib_name = "bluetooth.ble"
  },
  {
    label = "${cangjie_systemapi_api}/bluetooth/connection:ohos.bluetooth.connection"
    lib_name = "bluetooth.connection"
  },
  {
    label = "${cangjie_systemapi_api}/bluetooth/constant:ohos.bluetooth.constant"
    lib_name = "bluetooth.constant"
  },
  {
    label = "${cangjie_systemapi_api}/bundle:ohos.bundle"
    lib_name = "bundle"
  },
  {
    label = "${cangjie_systemapi_api}/bundle/bundle_manager:ohos.bundle.bundle_manager"
    lib_name = "bundle.bundle_manager"
  },
  {
    label = "${cangjie_systemapi_api}/skill:ohos.skill"
    lib_name = "skill"
  },
  {
    label = "${cangjie_systemapi_api}/metadata:ohos.metadata"
    lib_name = "metadata"
  },
  {
    label = "${cangjie_systemapi_api}/element_name:ohos.element_name"
    lib_name = "element_name"
  },
  {
    label = "${cangjie_systemapi_api}/common_event/common_event_data:ohos.common_event_data"
    lib_name = "common_event_data"
  },
  {
    label = "${cangjie_systemapi_api}/common_event/common_event_publish_data:ohos.common_event_publish_data"
    lib_name = "common_event_publish_data"
  },
  {
    label = "${cangjie_systemapi_api}/common_event/common_event_subscribe_info:ohos.common_event_subscribe_info"
    lib_name = "common_event_subscribe_info"
  },
  {
    label = "${cangjie_systemapi_api}/common_event/common_event_subscriber:ohos.common_event_subscriber"
    lib_name = "common_event_subscriber"
  },
  {
    label = "${cangjie_systemapi_api}/common_event/value_type:ohos.value_type"
    lib_name = "value_type"
  },
  {
    label = "${cangjie_systemapi_api}/common_event_manager:ohos.common_event_manager"
    lib_name = "common_event_manager"
  },
  {
    label = "${cangjie_systemapi_api}/security:ohos.security"
    lib_name = "security"
  },
  {
    label = "${cangjie_systemapi_api}/security/crypto_framework:ohos.security.crypto_framework"
    lib_name = "security.crypto_framework"
  },
  {
    label = "${cangjie_systemapi_api}/security/permission_request_result:ohos.security.permission_request_result"
    lib_name = "security.permission_request_result"
  },
  {
    label = "${cangjie_systemapi_api}/data/data_share_predicates:ohos.data.data_share_predicates"
    lib_name = "data.data_share_predicates"
  },
  {
    label = "${cangjie_systemapi_api}/device_info:ohos.device_info"
    lib_name = "device_info"
  },
  {
    label = "${cangjie_systemapi_api}/ohos/display:ohos.display"
    lib_name = "display"
  },
  {
    label = "${cangjie_systemapi_api}/ohos/screenshot:ohos.screenshot"
    lib_name = "screenshot"
  },
  {
    label = "${cangjie_systemapi_api}/data/distributed_kv_store:ohos.data.distributed_kv_store"
    lib_name = "data.distributed_kv_store"
  },
  {
    label = "${cangjie_systemapi_api}/application/event_hub:ohos.application.event_hub"
    lib_name = "application.event_hub"
  },
  {
    label = "${cangjie_systemapi_api}/file:ohos.file"
    lib_name = "file"
  },
  {
    label = "${cangjie_systemapi_api}/file/fileuri:ohos.file.fileuri"
    lib_name = "file.fileuri"
  },
  {
    label = "${cangjie_systemapi_api}/file/fs:ohos.file.fs"
    lib_name = "file.fs"
  },
  {
    label = "${cangjie_systemapi_api}/geo_location_manager:ohos.geo_location_manager"
    lib_name = "geo_location_manager"
  },
  {
    label = "${cangjie_systemapi_api}/global/drawable_descriptor:ohos.drawable_descriptor"
    lib_name = "drawable_descriptor"
  },
  {
    label = "${cangjie_systemapi_api}/global/raw_file_descriptor:ohos.raw_file_descriptor"
    lib_name = "raw_file_descriptor"
  },
  {
    label = "${cangjie_systemapi_api}/global/resource:ohos.resource"
    lib_name = "resource"
  },
  {
    label = "${cangjie_systemapi_api}/graphics:ohos.graphics"
    lib_name = "graphics"
  },
  {
    label = "${cangjie_systemapi_api}/graphics/color_space_manager:ohos.graphics.color_space_manager"
    lib_name = "graphics.color_space_manager"
  },
  {
    label = "${cangjie_systemapi_api}/hiviewdfx:ohos.hiviewdfx"
    lib_name = "hiviewdfx"
  },
  {
    label = "${cangjie_systemapi_api}/hiviewdfx/hi_app_event:ohos.hiviewdfx.hi_app_event"
    lib_name = "hiviewdfx.hi_app_event"
  },
  {
    label = "${cangjie_systemapi_api}/hilog:ohos.hilog"
    lib_name = "hilog"
  },
  {
    label = "${cangjie_systemapi_api}/hi_trace_meter:ohos.hi_trace_meter"
    lib_name = "hi_trace_meter"
  },
  {
    label = "${cangjie_systemapi_api}/i18n:ohos.i18n"
    lib_name = "i18n"
  },
  {
    label = "${cangjie_systemapi_api}/multimedia:ohos.multimedia"
    lib_name = "multimedia"
  },
  {
    label = "${cangjie_systemapi_api}/multimedia/image:ohos.multimedia.image"
    lib_name = "multimedia.image"
  },
  {
    label = "${cangjie_systemapi_api}/multimedia/camera:ohos.multimedia.camera"
    lib_name = "multimedia.camera"
  },
  {
    label = "${cangjie_systemapi_api}/file/photo_access_helper:ohos.file.photo_access_helper"
    lib_name = "file.photo_access_helper"
  },
  {
    label = "${cangjie_systemapi_api}/multimedia/media:ohos.multimedia.media"
    lib_name = "multimedia.media"
  },
  {
    label = "${cangjie_systemapi_api}/net:ohos.net"
    lib_name = "net"
  },
  {
    label = "${cangjie_systemapi_api}/net/connection:ohos.net.connection"
    lib_name = "net.connection"
  },
  {
    label = "${cangjie_systemapi_api}/net/http:ohos.net.http"
    lib_name = "net.http"
  },
  {
    label = "${cangjie_systemapi_api}/data/preferences:ohos.data.preferences"
    lib_name = "data.preferences"
  },
  {
    label = "${cangjie_systemapi_api}/data/relational_store:ohos.data.relational_store"
    lib_name = "data.relational_store"
  },
  {
    label = "${cangjie_systemapi_api}/request:ohos.request"
    lib_name = "request"
  },
  {
    label = "${cangjie_systemapi_api}/resource_manager:ohos.resource_manager"
    lib_name = "resource_manager"
  },
  {
    label = "${cangjie_systemapi_api}/rpc:ohos.rpc"
    lib_name = "rpc"
  },
  {
    label = "${cangjie_systemapi_api}/security/huks:ohos.security.huks"
    lib_name = "security.huks"
  },
  {
    label = "${cangjie_systemapi_api}/sensor:ohos.sensor"
    lib_name = "sensor"
  },
  {
    label = "${cangjie_systemapi_api}/settings:ohos.settings"
    lib_name = "settings"
  },
  {
    label = "${cangjie_systemapi_api}/system_date_time:ohos.system_date_time"
    lib_name = "system_date_time"
  },
  {
    label = "${cangjie_systemapi_api}/system_parameter_enhance:ohos.system_parameter_enhance"
    lib_name = "system_parameter_enhance"
  },
  {
    label =
        "${cangjie_systemapi_api}/telephony:ohos.telephony"
    lib_name = "telephony"
  },
  {
    label =
        "${cangjie_systemapi_api}/telephony/call:ohos.telephony.call"
    lib_name = "telephony.call"
  },
  {
    label = "${cangjie_systemapi_api}/data:ohos.data"
    lib_name = "data"
  },
  {
    label = "${cangjie_systemapi_api}/data/values_bucket:ohos.data.values_bucket"
    lib_name = "data.values_bucket"
  },
  {
    label = "${cangjie_systemapi_api}/web:ohos.web"
    lib_name = "web"
  },
  {
    label = "${cangjie_systemapi_api}/web/webview:ohos.web.webview"
    lib_name = "web.webview"
  },
  {
    label = "${cangjie_systemapi_api}/wifi_manager:ohos.wifi_manager"
    lib_name = "wifi_manager"
  },
]

cangjie_kits = [
  {
    label = "${cangjie_systemapi}/kit:kit.AbilityKit"
    lib_name = "AbilityKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.ArkData"
    lib_name = "ArkData"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.ArkGraphics2D"
    lib_name = "ArkGraphics2D"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.ArkUI"
    lib_name = "ArkUI"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.ArkWeb"
    lib_name = "ArkWeb"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.BasicServicesKit"
    lib_name = "BasicServicesKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.CameraKit"
    lib_name = "CameraKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.ConnectivityKit"
    lib_name = "ConnectivityKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.CoreFileKit"
    lib_name = "CoreFileKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.CryptoArchitectureKit"
    lib_name = "CryptoArchitectureKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.ImageKit"
    lib_name = "ImageKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.IPCKit"
    lib_name = "IPCKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.LocalizationKit"
    lib_name = "LocalizationKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.LocationKit"
    lib_name = "LocationKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.MediaKit"
    lib_name = "MediaKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.MediaLibraryKit"
    lib_name = "MediaLibraryKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.NetworkKit"
    lib_name = "NetworkKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.PerformanceAnalysisKit"
    lib_name = "PerformanceAnalysisKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.SensorServiceKit"
    lib_name = "SensorServiceKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.TelephonyKit"
    lib_name = "TelephonyKit"
  },
  {
    label = "${cangjie_systemapi}/kit:kit.UniversalKeystoreKit"
    lib_name = "UniversalKeystoreKit"
  },
]

cangjie_hybird_libs = []

cangjie_ui_libs = [
  # napi
  {
    label = "${cangjie_systemapi_api}/interop:ohos.ark_interop"
    lib_name = "ark_interop"
  },
  {
    label = "${cangjie_systemapi_api}/interop:ohos.ark_interop_helper"
    lib_name = "ark_interop_helper"
  },

  # window manager
  {
    label = "${cangjie_systemapi_api}/ohos/window:ohos.window"
    lib_name = "window"
  },

  # components
  {
    label = "${cangjie_systemapi_api}/ohos/base:ohos.base"
    lib_name = "base"
  },
  {
    label = "${cangjie_systemapi_api}/ohos/arkui/component:ohos.arkui.component"
    lib_name = "arkui.component"
  },
  {
    label = "${cangjie_systemapi_api}/ohos/router:ohos.router"
    lib_name = "router"
  },
  {
    label = "${cangjie_systemapi_api}/ohos/arkui/state_management:ohos.arkui.state_management"
    lib_name = "arkui.state_management"
  },
  {
    label = "${cangjie_systemapi_api}/ohos/animator:ohos.animator"
    lib_name = "animator"
  },
  {
    label = "${cangjie_systemapi_api}/ohos/curves:ohos.curves"
    lib_name = "curves"
  },
  {
    label = "${cangjie_systemapi_api}/ohos/prompt_action:ohos.prompt_action"
    lib_name = "prompt_action"
  },
  {
    label = "${cangjie_systemapi_api}/ohos/font:ohos.font"
    lib_name = "font"
  },
  {
    label = "${cangjie_systemapi_api}/ohos/matrix4:ohos.matrix4"
    lib_name = "matrix4"
  },
  {
    label = "${cangjie_systemapi_api}/ohos/measure:ohos.measure"
    lib_name = "measure"
  },
  {
    label = "${cangjie_systemapi_api}/ohos:ohos"
    lib_name = "ohos"
  },
  {
    label = "${cangjie_systemapi_api}/ohos/arkui/component_utils:ohos.arkui.component_utils"
    lib_name = "arkui.component_utils"
  },
  {
    label = "${cangjie_systemapi_api}/ohos/arkui/component_snapshot:ohos.arkui.component_snapshot"
    lib_name = "arkui.component_snapshot"
  },
]

cangjie_macro_libs = [
  {
    label = "${cangjie_systemapi_api}/ohos/arkui/state_macro_manage:arkui.state_macro_manage"
    lib_name = "arkui.state_macro_manage"
  },
  {
    label = "${cangjie_systemapi_api}/interop:ark_interop_macro"
    lib_name = "ark_interop_macro"
  },
]

cangjie_ohos_libs = cangjie_systemapi_libs
cangjie_ohos_libs += cangjie_hybird_libs
cangjie_ohos_libs += cangjie_ui_libs
