# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//vendor/huawei/arkcompiler/cangjie_api/cjc.gni")
import("//vendor/huawei/arkcompiler/cangjie_api/multi-product_diff.gni")

ohos_cj_library("kit.AbilityKit") {
  sources = [ "AbilityKit/index.cj" ]

  cj_deps = [
    "../api/ability:ohos.ability",
    "../api/ability_access_ctrl:ohos.ability_access_ctrl",
    "../api/bundle_manager:ohos.bundle_manager",
    "../api/eventhub:ohos.eventhub",
  ]

  kit = true
  lib_name = "AbilityKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.ArkData") {
  sources = [ "ArkData/index.cj" ]

  cj_deps = [
    "../api/data_share_predicates:ohos.data_share_predicates",
    "../api/distributed_kv_store:ohos.distributed_kv_store",
    "../api/preferences:ohos.preferences",
    "../api/relational_store:ohos.relational_store",
    "../api/values_bucket:ohos.values_bucket",
  ]

  kit = true
  lib_name = "ArkData"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.ArkGraphics2D") {
  sources = [ "ArkGraphics2D/index.cj" ]

  cj_deps = [
    "../api/arkui/cj:ohos.component",
    "../api/color_manager:ohos.color_manager",
  ]

  kit = true
  lib_name = "ArkGraphics2D"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.ArkUI") {
  sources = [ "ArkUI/index.cj" ]

  cj_deps = [
    "../api/display_runtime:ohos.display",
    "../api/screenshot:ohos.screenshot",
    "../api/window:ohos.window",
  ]

  kit = true
  lib_name = "ArkUI"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.ArkWeb") {
  sources = [ "ArkWeb/index.cj" ]

  cj_deps = [ "../api/webview:ohos.webview" ]

  kit = true
  lib_name = "ArkWeb"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.BasicServicesKit") {
  sources = [ "BasicServicesKit/index.cj" ]

  cj_deps = [
    "../api/battery_info:ohos.battery_info",
    "../api/common_event_manager:ohos.common_event_manager",
    "../api/device_info:ohos.device_info",
    "../api/request:ohos.request.agent",
    "../api/settings:ohos.settings",
    "../api/system_date_time:ohos.system_date_time",
    "../api/system_parameter_enhance:ohos.system_parameter_enhance",
  ]

  kit = true
  lib_name = "BasicServicesKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.CalendarKit") {
  sources = [ "CalendarKit/index.cj" ]

  cj_deps = [ "../api/calendar_manager:ohos.calendar_manager" ]

  kit = true
  lib_name = "CalendarKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.CameraKit") {
  sources = [ "CameraKit/index.cj" ]

  cj_deps = [ "../api/multimedia/camera:ohos.multimedia.camera" ]

  kit = true
  lib_name = "CameraKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.ConnectivityKit") {
  sources = [ "ConnectivityKit/index.cj" ]

  cj_deps = [
    "../api/bluetooth:ohos.bluetooth",
    "../api/bluetooth:ohos.bluetooth.baseProfile",
    "../api/bluetooth:ohos.bluetooth.ble",
    "../api/bluetooth:ohos.bluetooth.connection",
    "../api/bluetooth:ohos.bluetooth.constant",
    "../api/wifi_manager:ohos.wifi_manager",
  ]

  kit = true
  lib_name = "ConnectivityKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.ContactsKit") {
  sources = [ "ContactsKit/index.cj" ]

  cj_deps = [ "../api/contacts:ohos.contact" ]

  kit = true
  lib_name = "ContactsKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.CoreFileKit") {
  sources = [ "CoreFileKit/index.cj" ]

  cj_deps = [
    "../api/file_fileuri:ohos.file_fileuri",
    "../api/file_fs:ohos.file_fs",
  ]

  kit = true
  lib_name = "CoreFileKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.CryptoArchitectureKit") {
  sources = [ "CryptoArchitectureKit/index.cj" ]

  cj_deps = [ "../api/crypto:ohos.crypto" ]

  kit = true
  lib_name = "CryptoArchitectureKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.HybridUIKit") {
  sources = [ "HybridUIKit/index.cj" ]

  cj_deps = [
    "../api/arkui/cj:ohos.base",
    "../api/arkui/cj_ndk:ohos.hybrid_base",
  ]

  kit = true
  lib_name = "HybridUIKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.ImageKit") {
  sources = [ "ImageKit/index.cj" ]

  cj_deps = [ "../api/image:ohos.image" ]

  kit = true
  lib_name = "ImageKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.IPCKit") {
  sources = [ "IPCKit/index.cj" ]

  cj_deps = [ "../api/rpc:ohos.rpc" ]

  kit = true
  lib_name = "IPCKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.LocalizationKit") {
  sources = [ "LocalizationKit/index.cj" ]

  cj_deps = [
    "../api/i18n:ohos.i18n",
    "../api/resource_manager:ohos.resource_manager",
  ]

  kit = true
  lib_name = "LocalizationKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.LocationKit") {
  sources = [ "LocationKit/index.cj" ]

  cj_deps = [ "../api/geo_location_manager:ohos.geo_location_manager" ]

  kit = true
  lib_name = "LocationKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.MediaKit") {
  sources = [ "MediaKit/index.cj" ]

  cj_deps = [ "../api/multimedia_media:ohos.multimedia_media" ]

  kit = true
  lib_name = "MediaKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.MediaLibraryKit") {
  sources = [ "MediaLibraryKit/index.cj" ]

  cj_deps =
      [ "../api/multimedia/media_library:ohos.multimedia.photo_accesshelper" ]

  kit = true
  lib_name = "MediaLibraryKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.NetworkKit") {
  sources = [ "NetworkKit/index.cj" ]

  cj_deps = [
    "../api/net/connection:ohos.net.connection",
    "../api/net/http:ohos.net.http",
  ]

  kit = true
  lib_name = "NetworkKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.PerformanceAnalysisKit") {
  sources = [ "PerformanceAnalysisKit/index.cj" ]

  cj_deps = [
    "../api/cj_leakwatcher:ohos.cj_leakwatcher",
    "../api/hi_tracemeter:ohos.hi_tracemeter",
    "../api/hiappevent:ohos.hiappevent",
    "../api/hilog:ohos.hilog",
  ]

  kit = true
  lib_name = "PerformanceAnalysisKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.SensorServiceKit") {
  sources = [ "SensorServiceKit/index.cj" ]

  cj_deps = [ "../api/sensor:ohos.sensor" ]

  kit = true
  lib_name = "SensorServiceKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.TelephonyKit") {
  sources = [ "TelephonyKit/index.cj" ]

  cj_deps = [ "../api/telephony/telephony_call:ohos.telephony_call" ]

  kit = true
  lib_name = "TelephonyKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.UIKit") {
  sources = [ "UIKit/index.cj" ]

  cj_deps = [
    "../api/arkui/cj:ohos.animator",
    "../api/arkui/cj:ohos.base",
    "../api/arkui/cj:ohos.component",
    "../api/arkui/cj:ohos.component_snapshot",
    "../api/arkui/cj:ohos.concurrency",
    "../api/arkui/cj:ohos.curves",
    "../api/arkui/cj:ohos.font",
    "../api/arkui/cj:ohos.matrix4",
    "../api/arkui/cj:ohos.measure",
    "../api/arkui/cj:ohos.observer",
    "../api/arkui/cj:ohos.prompt_action",
    "../api/arkui/cj:ohos.router",
    "../api/arkui/cj:ohos.state_manage",
    "../api/arkui/cj:ohos.ui_resource",
  ]

  kit = true
  lib_name = "UIKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.UniversalKeystoreKit") {
  sources = [ "UniversalKeystoreKit/index.cj" ]

  cj_deps = [ "../api/security_huks:ohos.security_huks" ]

  kit = true
  lib_name = "UniversalKeystoreKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}
